# os_monitoring_tool

./: .env-template  .gitignore  LICENSE  MyDb.py  PYTHONINSTALL.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.py
db/: computer_processes.py  graphs.py  models.py  my_db.py  mysql_db.py  os_processes.py  pybites_timer.py  sqlite_db.py  web_data.py
model/: process.py  startstopdates.py  startstoptimes.py
src/: __init__.py
src/db/: computer_processes.py  my_db.py
src/ui/: all_processes_ui.py  components.py  main_ui.py
src/util/: web_data.py
tests/db/: test_computer_processes.py  test_create_db.py  test_db.py  test_file_logger.py  test_models.py
tests/db_subprocess_tests/: test_computer_processes.py  test_db.py  test_models.py
tests/process/: test_process.py
tests/util_tests/: test_file_logger.py  test_webdata.py
ui/: all_processes_ui.py  components.py  main_ui.py  new_tab.py
util/: file_logger.py
